[gd_scene load_steps=4 format=3 uid="uid://c8yy6kjobhw2i"]

[ext_resource type="Texture2D" uid="uid://bspft57ly7yy4" path="res://MINI1/Sprites/suelo-MINI1.png" id="1_3afbo"]
[ext_resource type="Script" uid="uid://bqn7fbjpn4eo1" path="res://MINI3/Scripts/escenario-MINI3.gd" id="1_8cx1r"]
[ext_resource type="Texture2D" uid="uid://bjt08kj2hlxn" path="res://MINI3/Sprites/diana-MINI3.png" id="2_8cx1r"]

[node name="Escenario-mini3" type="Node2D"]
script = ExtResource("1_8cx1r")

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(1.40488, 2.53125)
texture = ExtResource("1_3afbo")

[node name="Diana" type="Sprite2D" parent="Fondo"]
scale = Vector2(1.4, 0.675)
texture = ExtResource("2_8cx1r")

[node name="jugador1_pos" type="Marker2D" parent="."]
position = Vector2(96, 96)

[node name="jugador2_pos" type="Marker2D" parent="."]
position = Vector2(1056, 96)

[node name="jugador3_pos" type="Marker2D" parent="."]
position = Vector2(96, 552)

[node name="jugador4_pos" type="Marker2D" parent="."]
position = Vector2(1056, 552)
